Add RT-Tests error parser
Add a parser for RT-Tests output. The parser recognize WARN(ING) and FATAL
output. The Output is categorized in priority normal for WARN and high
for FATAL messages.

For now only cyclictest is tested well. The other tests like cyclicdeadline,
pip_stress, pi_stress, etc. may behave unexpected.

Signed-off-by: Benedikt Spranger <b.spranger@linutronix.de>
Reviewed-by: Holger Dengler <dengler@linutronix.de>

--- a/src/main/resources/hudson/plugins/warnings/parser/Messages.properties
+++ b/src/main/resources/hudson/plugins/warnings/parser/Messages.properties
@@ -259,3 +259,7 @@ Warnings.RFLint.TrendName=Robot Framework Warnings Trend
 Warnings.LinuxKernelOutput.ParserName=Linux Kernel Output Parser
 Warnings.LinuxKernelOutput.LinkName=Linux Kernel Output
 Warnings.LinuxKernelOutput.TrendName=Linux Kernel Output Trend
+
+Warnings.RTTests.ParserName=RT Tests Parser
+Warnings.RTTests.LinkName=RT Tests Output
+Warnings.RTTests.TrendName=RT Tests Trend
