Add parser for run-clang-tidy.py output
Clang-tidy is a static analysis utility. run-clang-tidy-*.py is a helper
python script for running clang-tidy on an entire project

--- a/src/main/resources/hudson/plugins/warnings/parser/Messages.properties
+++ b/src/main/resources/hudson/plugins/warnings/parser/Messages.properties
@@ -263,3 +263,6 @@ Warnings.LinuxKernelOutput.TrendName=Linux Kernel Output Trend
 Warnings.RTTests.ParserName=RT Tests Parser
 Warnings.RTTests.LinkName=RT Tests Output
 Warnings.RTTests.TrendName=RT Tests Trend
+Warnings.ClangTidy.ParserName=Clang-Tidy
+Warnings.ClangTidy.LinkName=Clang-Tidy
+Warnings.ClangTidy.TrendName=Clang-Tidy Warnings Trend
