Add sdcc compiler support
add sdcc compiler, unit test with an output file, sdcc messages

--- a/src/main/resources/hudson/plugins/warnings/parser/Messages.properties
+++ b/src/main/resources/hudson/plugins/warnings/parser/Messages.properties
@@ -105,6 +105,10 @@ Warnings.iar.ParserName=IAR Compiler (C/C++)
 Warnings.iar.LinkName=IAR C/C++ Warnings
 Warnings.iar.TrendName=IAR C/C++ Warnings Trend
 
+Warnings.sdcc.ParserName=SDCC Compiler (C)
+Warnings.sdcc.LinkName=SDCC Warnings
+Warnings.sdcc.TrendName=SDCC Warnings Trend
+
 Warnings.IntelC.ParserName=Intel C Compiler
 Warnings.IntelC.LinkName=Intel C Warnings
 Warnings.IntelC.TrendName=Intel C Warnings Trend
