--- a/src/main/resources/hudson/plugins/warnings/parser/Messages_de.properties
+++ b/src/main/resources/hudson/plugins/warnings/parser/Messages_de.properties
@@ -108,6 +108,10 @@ Warnings.iar.ParserName=IAR Compiler (C/C++)
 Warnings.iar.LinkName=IAR C/C++ Warnungen
 Warnings.iar.TrendName=IAR C/C++ Warnungen Trend
 
+Warnings.sdcc.ParserName=SDCC Compiler (C)
+Warnings.sdcc.LinkName=SDCC Warnungen
+Warnings.sdcc.TrendName=SDCC Warnungen Trend
+
 Warnings.IntelC.ParserName=Intel C Compiler
 Warnings.IntelC.LinkName=Intel C Warnungen
 Warnings.IntelC.TrendName=Intel C Warnungen Trend
