Added sonarqube parsers

--- a/src/main/resources/hudson/plugins/warnings/parser/Messages.properties
+++ b/src/main/resources/hudson/plugins/warnings/parser/Messages.properties
@@ -266,3 +266,11 @@ Warnings.RTTests.TrendName=RT Tests Trend
 Warnings.ClangTidy.ParserName=Clang-Tidy
 Warnings.ClangTidy.LinkName=Clang-Tidy
 Warnings.ClangTidy.TrendName=Clang-Tidy Warnings Trend
+
+Warnings.SonarQubeIssues.ParserName=SonarQube Issues
+Warnings.SonarQubeIssues.LinkName=SonarQube Issues
+Warnings.SonarQubeIssues.Trend=SonarQube Issues Warnings Trend
+
+Warnings.SonarQubeDiff.ParserName=SonarQube Diff
+Warnings.SonarQubeDiff.LinkName=SonarQube Diff
+Warnings.SonarQubeDiff.Trend=SonarQube Diff Warnings Trend
