--- a/src/main/resources/hudson/plugins/warnings/parser/Messages.properties
+++ b/src/main/resources/hudson/plugins/warnings/parser/Messages.properties
@@ -266,3 +266,6 @@ Warnings.RTTests.TrendName=RT Tests Trend
 Warnings.ClangTidy.ParserName=Clang-Tidy
 Warnings.ClangTidy.LinkName=Clang-Tidy
 Warnings.ClangTidy.TrendName=Clang-Tidy Warnings Trend
+Warnings.RuboCop.ParserName=RuboCop
+Warnings.RuboCop.LinkName=RuboCop
+Warnings.RuboCop.TrendName=RuboCop
